feat: v1.0.3 — apply remaining usability-test feedback and add Embedded AI
Bug fixes:
- Fix v1.0.2 startup failure: check-java.sh CRLF broke the bootRun JDK
  preflight on macOS/Linux; enforce LF via .gitattributes and make the
  preflight non-fatal when its runner is unavailable
- Fix inverted High/Low ordering in Security Center severity sort
  (chained Comparator.reversed() bug) and add a sort selector UI
- Order scan versions semantically (VersionOrder) in Risk Trend,
  Security Center, License, and Version Diff instead of import time
- Reject past/malformed custom deferral dates with 400 (was silent
  +1 month fallback); native date picker with min=tomorrow
- Rebuild AiResponseSanitizer on Jackson: unwrap JSON arrays/objects,
  fences and quoted strings; sanitize all plain-text AI paths centrally;
  system prompts now forbid JSON for free-text answers
- Fire insight backfill after the settings transaction commits (was
  racing it and silently no-oping); regenerate recent insights when the
  prompt locale changes; failed refresh keeps existing insights and the
  license refresh button now surfaces errors
- Reject duplicate concurrent Quick Imports of the same repo (409)

Features:
- Embedded AI: llama.cpp llama-server sidecar managed from Settings → AI
  (EmbeddedAiService + /api/settings/ai/embedded endpoints); Qwen3 1.7B
  Q4_K_M preferred, Gemma 3 1B fallback; --reasoning-budget 0 so thinking
  models return content for short completions
- Quick Import cancel button (queued jobs stop immediately, running jobs
  at the next phase boundary)
- Owl reminder banner for recently expired deferrals
  (deferral_expired_at column, db/defer_expiry_reminder.sql)
- Apply Patch success panel: prominent PR link + collapsible change summary

UX / i18n:
- Guidance copy: token requirement before Apply Patch, Quick Import
  no-account hint, VCS token security note, AI backfill notice
- Graph totals labeled, larger bars/legend; license page and user menu
  font bumps; compact fi